# impasse-solver

./: impasse-solver.cabal  stack.yaml
app/: Main.hs
src/: Impasse.hs
src/Impasse/: Board.hs  Solve.hs
test/Impasse/: BoardSpec.hs  SolveSpec.hs
