name:                impasse-solver
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/corajr/impasse-solver#readme
license:             BSD3
license-file:        LICENSE
author:              Cora Johnson-Roberson
maintainer:          me@corajr.com
copyright:           2016 Cora Johnson-Roberson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Impasse.Board
                     , Impasse.Solve
  build-depends:       base >= 4.7 && < 5
                     , array
                     , astar
                     , unordered-containers
                     , containers
                     , cereal
                     , hashable
                     , mtl
  default-language:    Haskell2010

executable impasse-solver
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , impasse-solver
  default-language:    Haskell2010

test-suite impasse-solver-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , impasse-solver
                     , array
                     , unordered-containers
                     , containers
                     , hashable
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/corajr/impasse-solver
